TEST_PROGRAMS/INVALID/shabbir_hussain/prog1.min
#This program uses the Euler method to calculate derivatives at a point

var tn : real;
var yn : real;
var stepSize : real;
var iterations : int;

tn = 10;
yn = 0;
stepSize = 00.05;
iterations = 1000;

while iterations do
yn = yn + stepSize * yn * x0;
iterations = iterations - 1;
done

